style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap');

* {
    box-sizing: border-box;
}

body {
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}

p {
    padding-top: 350px;
    font-size: 20px;
}

a {
    display: flex; 
    align-items: center;
    justify-content: center;
}

.title {
    background: url('assets/title.png') no-repeat;
    background-position: center;
    position: absolute;
    height: 100%;
    width: 100%;
    animation: UpDown 3.5s linear infinite;
}

@keyframes UpDown {
  0%, 100% {
    bottom: 0;
  }
  50% {
    bottom: 25px;
  }
}

.titlegame {
    display: flex; 
    align-items: center;
    justify-content: center;
    width: 200px;
    height: 120px;
 
}

.titlegame img {
    width: 70%;
    height: auto;
 
}

.titlebg {
    background-color: white;
    display: flex; 
    align-items: center;
    justify-content: center;
    padding-top: 15px;
    padding-bottom: 15px;
    border-radius: 15px;
    width: 70%;
    height: auto;
}

.bg {
    background: url('assets/redwaves.png') center;
    height: 120%;
    width: 400%;
    position: absolute;
    z-index: -1;
    background-repeat: repeat-x;
    animation: bg 20s linear infinite;
    filter: blur(15px)
}


@keyframes bg {
    100% {
        transform: translateX(-1000px);
    }
}

.back {
    background-color: rgb(241, 168, 178);
    font-family: 'Roboto', sans-serif;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    margin: 0;
}

.game {
    background-color: white;
    display: flex; 
    align-items: right;
    justify-content: right;
    padding-top: 10px;
    padding-bottom: 15px;
    border-radius: 15px;
    width: 70%;
    height: 70vh;
}

